# Software-Security-Auditor

./: .gitignore  CLAUDE.md  SoftwareSecurityAuditor.spec  app.py  build.ps1  install-service.ps1  pyproject.toml  requirements.txt  uninstall-service.ps1  web.config
.claude/: settings.json  settings.local.json
templates/: age_restriction_graph.html  assessment_form.html  assessment_review.html  base.html  category_detail.html  category_edit.html  category_list.html  country_detail.html  country_list.html  index.html  login.html  new_category.html  reports.html  reports_index.html  settings.html  software_detail.html  software_edit.html  software_list.html  software_updates_graph.html  vendor_assessment_form.html  vendor_detail.html  vendor_form.html  vendor_list.html  vendor_origins.html
