[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "software-security-auditor"
version = "1.0.0"
description = "Web-based software security auditing tool"
requires-python = ">=3.12"
dependencies = [
    "flask==3.1.3",
    "reportlab==4.4.10",
    "werkzeug==3.1.8",
    "pypdf==6.13.2",
    "pillow==12.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "blinker==1.9.0",
    "click==8.3.2",
    "itsdangerous==2.2.0",
    "colorama==0.4.6",
    "charset-normalizer==3.4.7",
]

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.14",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["templates*", "assets*"]
